--- a/UI.Web/UI.Web.csproj
+++ b/UI.Web/UI.Web.csproj
@@ -170,6 +170,12 @@
       <DependentUpon>Planes.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PlanesReport.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="PlanesReport.Designer.cs">
+      <DependentUpon>PlanesReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -208,6 +214,9 @@
       <DependentUpon>CursosReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="licenses.licx" />
+    <EmbeddedResource Include="PlanesReport.resx">
+      <DependentUpon>PlanesReport.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
