--- a/UI.Web/UI.Web.csproj
+++ b/UI.Web/UI.Web.csproj
@@ -52,6 +52,7 @@
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing.Design" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.Abstractions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
